[project]
name = "repl-nix-surveydataanalyzer-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.49.1",
    "plotly>=5.24.1",
    "reportlab>=4.2.5",
    "seaborn>=0.13.2",
    "selenium-wire>=5.1.0",
    "streamlit>=1.40.2",
]
